# MultiChor

./: .gitignore  .hlint.yaml  HasChor.cabal  LICENSE.inherited  MultiChor.cabal  README.md  fourmolu.yaml  hie.yaml  scratch.txt
.github/: README.md
examples/: Auction.hs  Bank2PC.hs  Bookseller0Network.hs  Bookseller1Simple.hs  Bookseller2HigherOrder.hs  Bookseller3LocPoly.hs  BooksellerFancy.hs  CLI.hs  CardGame.hs  ChooseTeams.hs  Data.hs  DelegationFig20.hs  DiffieHellman.hs  EasyMain.hs  ExampleChor.hs  GMWReal.hs  KVS1Simple.hs  KVS2PrimaryBackup.hs  KVS3HigherOrder.hs  KVS4LocPoly.hs  KVS5Fig17.hs  KVS6SizePoly.hs  KVS7SimplePoly.hs  KVS8Paper.hs  KVS_PaperExamples.hs  Karatsuba.hs  Lottery.hs  MPCFake.hs  MPCSum.hs  MergeSort.hs  ObliviousTransfer.hs  Playground.hs  QuickSort.hs  RingLeader.hs  Tests.hs
examples/Distribution/TestSuite/: QuickCheck.hs
examples/kvs-1-simple/: Main.hs
paper/: .gitignore  compile.bash  main.tex  refs.bib
src/: CLI.hs  Choreography.hs  TTY.hs
src/Choreography/: Choreo.hs  Choreography.hs  Core.hs  Location.hs  Locations.hs  Network.hs  Polymorphism.hs
src/Choreography/Choreography/: Batteries.hs
src/Choreography/Internal/: Choreo.hs  Location.hs  Network.hs
src/Choreography/Locations/: Batteries.hs
src/Choreography/Network/: Http.hs  Local.hs
src/Control/Monad/: Freer.hs
