cabal-version:      2.4
name:               HasChorPlus
version:            0.1.0.1
license-file:       LICENSE
description:
    HasChor is a library for functional choreographic programming in Haskell.
    See the README.md for more information.

tested-with:
    GHC == 9.6.3
    GHC == 9.4.7
    GHC == 9.2.8

extra-doc-files:
    README.md

common basic-config
    default-language: GHC2021
    build-depends:
        , base                 >= 4.16 && < 4.20
        , bytestring           >= 0.11 && < 0.13
        , http-client          >= 0.7  && < 0.8
        , servant              >= 0.19 && < 0.21
        , servant-client       >= 0.19 && < 0.21
        , servant-server       >= 0.19 && < 0.21
        , template-haskell     >= 2.18 && < 2.22
        , unordered-containers >= 0.2  && < 0.3
        , warp                 >= 3.3  && < 3.4
    ghc-options:
      -- -Wall
      -fprint-potential-instances
    default-extensions: DataKinds
                       ,LambdaCase

library choreography
    import: basic-config
    hs-source-dirs:   src
    exposed-modules:
        Choreography
        Choreography.Choreo
        Choreography.Location
        Choreography.Network
        Choreography.Network.Http
        Choreography.Network.Local
        Control.Monad.Freer

common lib-dependent
    import: basic-config
    build-depends: choreography

common example
    import: lib-dependent
    hs-source-dirs:   examples
    build-depends:
        , containers >= 0.6  && < 0.7
        , split   >= 0.2  && < 0.3
        , random  >= 1.2  && < 1.3
        , time    >= 1.11 && < 1.13
        , QuickCheck >= 2.14 && < 3

executable bank-2pc
    import: example
    main-is:          Bank2PC.hs
    ghc-options:
      -main-is Bank2PC

executable bookseller-0-network
    import: example
    main-is:          Bookseller0Network.hs
    ghc-options:
      -main-is Bookseller0Network

executable bookseller-1-simple
    import: example
    main-is:          Bookseller1Simple.hs
    ghc-options:
      -main-is Bookseller1Simple

executable bookseller-2-higher-order
    import: example
    main-is:          Bookseller2HigherOrder.hs
    ghc-options:
      -main-is Bookseller2HigherOrder

executable bookseller-3-loc-poly
    import: example
    main-is:          Bookseller3LocPoly.hs
    ghc-options:
      -main-is Bookseller3LocPoly

executable diffiehellman
    import: example
    main-is:          DiffieHellman.hs
    ghc-options:
      -main-is DiffieHellman

executable karatsuba
    import: example
    main-is:          Karatsuba.hs
    ghc-options:
      -main-is Karatsuba
    build-depends:
        , async      >= 2.2  && < 2.3

executable kvs1
    import: example
    main-is:          KVS1Simple.hs
    ghc-options:
      -main-is KVS1Simple

executable kvs2
    import: example
    main-is:          KVS2PrimaryBackup.hs
    ghc-options:
      -main-is KVS2PrimaryBackup

executable kvs3
    import: example
    main-is:          KVS3HigherOrder.hs
    ghc-options:
      -main-is KVS3HigherOrder

executable kvs4
    import: example
    main-is:          KVS4LocPoly.hs
    ghc-options:
      -main-is KVS4LocPoly

executable mergesort
    import: example
    main-is:          MergeSort.hs
    ghc-options:
      -main-is MergeSort

executable playground
    import: example
    main-is:          Playground.hs
    ghc-options:
      -main-is Playground

executable quicksort
    import: example
    main-is:          QuickSort.hs
    ghc-options:
      -main-is QuickSort
    build-depends:
        , async      >= 2.2  && < 2.3

executable ring-leader
    import: example
    main-is:          RingLeader.hs
    ghc-options:
      -main-is RingLeader
    build-depends:
        , transformers >= 0.5  && < 0.7
